--- a/src/main/resources/templates/view/movies.html
+++ b/src/main/resources/templates/view/movies.html
@@ -10,8 +10,8 @@
 <link rel="stylesheet"
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" />
 <style type="text/css">
-.col-md-3 {
-	margin-bottom: 10px;
+.col-md-4 {
+	margin-bottom: 15px;
 }
 
 .card-body {
@@ -25,20 +25,23 @@
 	color: #fff;
 	text-align: center;
 }
-
 </style>
 </head>
 <body>
-<div class="container-fluid">
-	<div class="row" style="margin-top: 20px;">
-		<div class="col-md-3" th:each="movieroom : ${movierooms}">
-			<div class="card">
-				<a th:href="@{'/getmovieroom/'+${movieroom}}" style="text-decoration: none;"><div class="card-body" th:text="${movieroom}">
-				</div></a>
+	<div class="container-fluid">
+		<div class="row" style="margin-top: 20px;">
+			<div class="col-md-4" th:each="movie : ${movies}">
+				<div class="card">
+					<img th:src="${movie.images.fanart}" class="card-img-top" alt="..." height="20%"> 
+					 <a th:href="@{'/showmovie?movieId='+${movie.imdb_id}}" style="text-decoration: none;">
+						<div class="card-body">
+							<h5 class="card-title" th:text="${#strings.length(movie.title)>35 ? #strings.substring(movie.title,0,35) + '...' : movie.title}">Movie Title</h5>
+						</div>
+					</a>
+				</div>
 			</div>
 		</div>
 	</div>
-</div>
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script
