--- a/src/main/resources/templates/view/moviedb/languagemovies.html
+++ b/src/main/resources/templates/view/moviedb/languagemovies.html
@@ -25,6 +25,13 @@
 	color: #fff;
 	text-align: center;
 }
+
+.card-title {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 </style>
 </head>
 <body>
