--- a/src/main/resources/templates/view/moviedb/appendmovies.html
+++ b/src/main/resources/templates/view/moviedb/appendmovies.html
@@ -1,4 +1,4 @@
-<div class="row" style="margin-top: 20px;">
+<div class="row" style="margin-top: 20px;" th:if="${movies!=null and movies.size() &gt; 0}">
 	<div class="col-md-3 well" th:each="movie : ${movies}">
 		<div class="card">
 			<img th:src="${movie.backdrop_path!=null and movie.backdrop_path!='' and movie.backdrop_path!=undefined?'https://image.tmdb.org/t/p/w500_and_h282_bestv2/'+movie.backdrop_path:'http://www.reelviews.net/resources/img/default_poster.jpg'}" class="card-img-top" alt="..." style="height: 197px;"> <a
@@ -6,7 +6,7 @@
 				style="text-decoration: none;">
 				<div class="card-body">
 					<h5 class="card-title"
-						th:text="${#strings.length(movie.title)>25 ? #strings.substring(movie.title,0,25) + '...' : movie.title}">Movie
+						th:text="${movie.title}">Movie
 						Title</h5>
 				</div>
 			</a>
