--- a/src/main/resources/templates/view/popcron/allmovies.html
+++ b/src/main/resources/templates/view/popcron/allmovies.html
@@ -56,12 +56,15 @@
 							href="#">Dessert</a>
 					</div></li> -->
 				<li class="nav-item"><a
-					class="nav-link text-light font-weight-bold px-3" th:href="@{'/popular'}">POPULAR
-						MOVIES</a></li>
+					class="nav-link text-light font-weight-bold px-3"
+					th:href="@{'/popular'}">POPULAR MOVIES</a></li>
 
 				<li class="nav-item"><a
-					class="nav-link text-light font-weight-bold px-3" th:href="@{'/moviesbylanguage?language=te'}">TELUGU</a>
-				</li>
+					class="nav-link text-light font-weight-bold px-3"
+					th:href="@{'/moviesbylanguage?language=te'}">TELUGU</a></li>
+			</ul>
+			<ul class="navbar-nav">
+				<li class="nav-item"><a href="" class="nav-link text-light font-weight-bold px-3">SIGNUP</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -93,13 +96,24 @@
 
 		// callback
 		function onScroll(){ 
-		    if( $(window).scrollTop() + window.innerHeight >= document.body.scrollHeight ) { 
+		    /* if( $(window).scrollTop() + window.innerHeight >= document.body.scrollHeight ) {  */
+		    	if($(window).scrollTop() + $(window).height() == getDocHeight()) {
 		    	pageIndex = pageIndex + 1;
 				$.get("/getmovies?pageIndex=" + pageIndex+"&genre="+ genre,
 						function(response) {
 							$("#appenddata").append(response);
 				});
 		    }
+		}
+		
+		
+		function getDocHeight() {
+		    var D = document;
+		    return Math.max(
+		        D.body.scrollHeight, D.documentElement.scrollHeight,
+		        D.body.offsetHeight, D.documentElement.offsetHeight,
+		        D.body.clientHeight, D.documentElement.clientHeight
+		    );
 		}
 
 	});
