--- a/src/main/resources/templates/view/popcron/playmovie.html
+++ b/src/main/resources/templates/view/popcron/playmovie.html
@@ -31,6 +31,44 @@
 </style>
 </head>
 <body>
+<nav class="navbar navbar-expand-md navbar-light bg-dark fixed-top">
+		<a class="navbar-brand"><img
+			src="https://blog.eduonix.com/wp-content/uploads/2018/12/eduonix-logo.png"></a>
+		<button type="button" class="navbar-toggler bg-light"
+			data-toggle="collapse" data-target="#nav">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+
+		<div class="collapse navbar-collapse justify-content-between" id="nav">
+			<ul class="navbar-nav">
+				<li class="nav-item"><a
+					class="nav-link text-light font-weight-bold px-3"
+					th:href="@{'/movies'}">ALL MOVIES</a></li>
+				<li class="nav-item"><a
+					class="nav-link text-light font-weight-bold px-3"
+					th:href="@{'/movierooms'}">MOVIE ROOMS</a></li>
+				<li class="nav-item"><a
+					class="nav-link text-light font-weight-bold px-3"
+					th:href="@{'/genres'}">GENRES</a></li>
+				<!-- <li class="nav-item dropdown" data-toggle="dropdown"><a
+					class="nav-link text-light font-weight-bold px-3 dropdown-toggle"
+					href="#">GENRES</a>
+					<div class="dropdown-menu">
+						<a class="dropdown-item" href="#">Fast Food</a> <a
+							class="dropdown-item" href="#">Lunch</a> <a class="dropdown-item"
+							href="#">Dessert</a>
+					</div></li> -->
+				<li class="nav-item"><a
+					class="nav-link text-light font-weight-bold px-3"
+					th:href="@{'/popular'}">POPULAR MOVIES</a></li>
+
+				<li class="nav-item"><a
+					class="nav-link text-light font-weight-bold px-3"
+					th:href="@{'/moviesbylanguage?language=te'}">TELUGU</a></li>
+			</ul>
+		</div>
+	</nav>
+
 	<div class="container-fluid">
 		<div class="row" style="margin-top: 20px;">
 			<div class="col-md-8">
