--- a/src/main/resources/templates/view/popcron/showmovie.html
+++ b/src/main/resources/templates/view/popcron/showmovie.html
@@ -31,6 +31,44 @@
 </style>
 </head>
 <body>
+<nav class="navbar navbar-expand-md navbar-light bg-dark fixed-top">
+		<a class="navbar-brand"><img
+			src="https://blog.eduonix.com/wp-content/uploads/2018/12/eduonix-logo.png"></a>
+		<button type="button" class="navbar-toggler bg-light"
+			data-toggle="collapse" data-target="#nav">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+
+		<div class="collapse navbar-collapse justify-content-between" id="nav">
+			<ul class="navbar-nav">
+				<li class="nav-item"><a
+					class="nav-link text-light font-weight-bold px-3"
+					th:href="@{'/movies'}">ALL MOVIES</a></li>
+				<li class="nav-item"><a
+					class="nav-link text-light font-weight-bold px-3"
+					th:href="@{'/movierooms'}">MOVIE ROOMS</a></li>
+				<li class="nav-item"><a
+					class="nav-link text-light font-weight-bold px-3"
+					th:href="@{'/genres'}">GENRES</a></li>
+				<!-- <li class="nav-item dropdown" data-toggle="dropdown"><a
+					class="nav-link text-light font-weight-bold px-3 dropdown-toggle"
+					href="#">GENRES</a>
+					<div class="dropdown-menu">
+						<a class="dropdown-item" href="#">Fast Food</a> <a
+							class="dropdown-item" href="#">Lunch</a> <a class="dropdown-item"
+							href="#">Dessert</a>
+					</div></li> -->
+				<li class="nav-item"><a
+					class="nav-link text-light font-weight-bold px-3"
+					th:href="@{'/popular'}">POPULAR MOVIES</a></li>
+
+				<li class="nav-item"><a
+					class="nav-link text-light font-weight-bold px-3"
+					th:href="@{'/moviesbylanguage?language=te'}">TELUGU</a></li>
+			</ul>
+		</div>
+	</nav>
+
 	<div class="container-fluid">
 		<div class="row" style="margin-top: 20px;">
 			<div class="col-md-4">
@@ -90,11 +128,10 @@
 
 					</tbody>
 				</table>
-				<div style="margin-top: 10px;margin-bottom:20px;">
-					<a class="btn btn-success"
-						th:href="@{'/playmovie?movieId='+${movie.imdb_id}}">Watch
-						Movie</a> <a class="btn btn-danger" th:href="${movie.trailer}"
-						data-lity>Watch Trailer</a>
+				<div style="margin-top: 10px; margin-bottom: 20px;">
+					<a class="btn btn-success playmovie">Watch Movie</a> <a
+						class="btn btn-danger" th:href="${movie.trailer}" data-lity>Watch
+						Trailer</a>
 				</div>
 			</div>
 		</div>
@@ -102,7 +139,27 @@
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script
 	src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 <script
 	src="https://cdnjs.cloudflare.com/ajax/libs/lity/2.4.0/lity.min.js"></script>
+
+
+
+<script type="text/javascript" th:inline="javascript">
+	var ipAddress = "";
+	var movieId = [[${movieId}]];
+	
+	$(function() {
+		$.get("https://ipapi.co/json/", function(response) {
+			ipAddress = response.ip;
+			console.log(ipAddress);
+		});
+	});	
+	
+	$(".playmovie").on("click", function() {
+		window.location.href="/playmovie?movieId="+movieId+"&address="+ipAddress;
+	});	
+</script>
 </html>
