--- a/src/main/resources/templates/view/moviedb/playmovie.html
+++ b/src/main/resources/templates/view/moviedb/playmovie.html
@@ -69,7 +69,7 @@
 		</div>
 	</nav>
 
-	<div class="container-fluid">
+	<div class="container-fluid" style="margin-top: 70px;">
 		<div class="row" style="margin-top: 20px;">
 			<div class="col-md-8">
 				<div class="row">
