images fixed height

--- a/src/main/resources/templates/view/moviedb/playmovie.html
+++ b/src/main/resources/templates/view/moviedb/playmovie.html
@@ -126,10 +126,10 @@
 				</div>
 			</div>
 			<div class="col-md-4">
-				<div class="card" style="position: fixed; height: 95%;">
+				<div class="card" style="position: fixed;height:calc(100vh - 76px);border-radius: 1%;margin-right:10px;">
 					<img
 						th:src="${movie.poster_path!=null and movie.poster_path!='' and movie.poster_path!=undefined?'https://image.tmdb.org/t/p/w600_and_h900_bestv2'+movie.poster_path:'http://www.reelviews.net/resources/img/default_poster.jpg'}"
-						class="card-img-top" alt="..." style="height: 100%;">
+						class="card-img-top" alt="..." style="height: 100%;border-radius: 1%;">
 				</div>
 			</div>
 		</div>
