--- a/src/main/resources/templates/view/popcron/playmovie.html
+++ b/src/main/resources/templates/view/popcron/playmovie.html
@@ -134,8 +134,8 @@
 				</div>
 			</div>
 			<div class="col-md-4" >
-				<div class="card" style="position: fixed;height:95%;">
-					<img th:src="${movie.images.poster}" class="card-img-top" alt="..." style="height:100%;"> <a
+				<div class="card" style="position: fixed;height:calc(100vh - 76px);border-radius: 1%;margin-right:10px;">
+					<img th:src="${movie.images.poster}" class="card-img-top" alt="..." style="height: 100%;border-radius: 1%;"> <a
 						th:href="@{'/showmovie?movieId='+${movie.imdb_id}}"
 						style="text-decoration: none;"> </a>
 				</div>
