ionic functionality for rest

--- a/src/main/resources/templates/view/moviesdata.html
+++ b/src/main/resources/templates/view/moviesdata.html
@@ -4,3 +4,5 @@ https://www.programmableweb.com/category/torrents/api
 https://ashishchaudhary.in/torrent-streaming
 
 https://webtor.io/show?magnet=magnet:?xt=urn:btih:2BF7E581464D72A032456B85AD96A0F6BEC0267F
+
+C:\Program Files\AdoptOpenJDK\jdk-11.0.5.10-hotspot\bin
