--- a/src/main/resources/templates/view/moviedb/showmovie.html
+++ b/src/main/resources/templates/view/moviedb/showmovie.html
@@ -9,8 +9,9 @@
 	href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" />
 <link rel="stylesheet"
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" />
-<link rel="stylesheet"
-	href="https://cdnjs.cloudflare.com/ajax/libs/lity/2.4.0/lity.css" />
+<link rel="stylesheet" th:href="@{/lity/lity.css}" />
+	
+	<!-- https://cdnjs.cloudflare.com/ajax/libs/lity/2.4.0/lity.css -->
 
 <style type="text/css">
 .col-md-4 {
@@ -119,10 +120,9 @@
 					</tbody>
 				</table>
 				<div style="margin-top: 10px; margin-bottom: 20px;">
-					<a class="btn btn-success playmovie" onClick="playMovie()">Watch Movie</a> <a
-						class="btn btn-danger"
-						th:href="${'https://www.youtube.com/watch?v='+trailer}" data-lity>Watch
-						Trailer</a>
+					<a class="btn btn-success playmovie" onClick="playMovie()" th:if="${link==null}">Watch Movie</a> 
+					<a class="btn btn-success" th:href="${'https://www.youtube.com/watch?v='+link}" data-lity th:if="${link!=null}">Watch Movie</a>
+					<a class="btn btn-danger" th:href="${'https://www.youtube.com/watch?v='+trailer}" data-lity>Watch Trailer</a>
 				</div>
 			</div>
 		</div>
@@ -133,10 +133,10 @@
 	src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script
 	src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-<script
-	src="https://cdnjs.cloudflare.com/ajax/libs/lity/2.4.0/lity.min.js"></script>
+	
+<script th:src="@{/lity/lity.js}"></script>
 
-
+<!-- https://cdnjs.cloudflare.com/ajax/libs/lity/2.4.0/lity.min.js -->
 
 <script type="text/javascript" th:inline="javascript">
 	var ipAddress = "";
