--- a/src/main/resources/templates/view/popcron/showmovie.html
+++ b/src/main/resources/templates/view/popcron/showmovie.html
@@ -9,8 +9,7 @@
 	href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" />
 <link rel="stylesheet"
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" />
-<link rel="stylesheet"
-	href="https://cdnjs.cloudflare.com/ajax/libs/lity/2.4.0/lity.css" />
+<link rel="stylesheet" th:href="@{/lity/lity.css}" />
 
 <style type="text/css">
 .col-md-4 {
@@ -141,8 +140,7 @@
 	src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script
 	src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-<script
-	src="https://cdnjs.cloudflare.com/ajax/libs/lity/2.4.0/lity.min.js"></script>
+<script th:src="@{/lity/lity.js}"></script>
 
 
 
