--- a/src/main/resources/templates/view/moviedb/moviepersons.html
+++ b/src/main/resources/templates/view/moviedb/moviepersons.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="ISO-8859-1" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>All Movies - Movie Fantasy</title>
+<title>All Persons - Movie Fantasy</title>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" />
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" />
 <link rel="stylesheet" th:href="@{/css/custom.css}" />
@@ -11,7 +11,7 @@
 <body>
 	<nav th:replace="fragments/menuheader :: menuheader"></nav>
 	<div class="container-fluid">
-		<div th:replace="fragments/searchmenu :: searchmenu"></div>
+		<div th:replace="fragments/searchperson :: searchperson"></div>
 		<div class="rowtop">
 			<div id="appenddata"></div>
 		</div>
@@ -27,7 +27,7 @@
 $(function() {
 	var pageIndex = 1;
 	var search = [[${search}]]
-	$.get("/getdbmovies?pageIndex=" + pageIndex + "&search=" + search, function(response) {
+	$.get("/getpersons?pageIndex=" + pageIndex + "&search=" + search, function(response) {
 		$("#appenddata").append(response);
 	});
 
@@ -37,7 +37,7 @@ $(function() {
 	function onMobileScroll() {
 		if ($(window).scrollTop() + window.innerHeight >= document.body.scrollHeight) {
 			pageIndex = pageIndex + 1;
-			$.get("/getdbmovies?pageIndex=" + pageIndex + "&search=" + search, function(response) {
+			$.get("/getpersons?pageIndex=" + pageIndex + "&search=" + search, function(response) {
 				$("#appenddata").append(response);
 			});
 		}
@@ -47,7 +47,7 @@ $(function() {
 	function onWebScroll() {
 			if($(window).scrollTop() + $(window).height() == getDocHeight()) {
 			pageIndex = pageIndex + 1;
-			$.get("/getdbmovies?pageIndex=" + pageIndex + "&search=" + search, function(response) {
+			$.get("/getpersons?pageIndex=" + pageIndex + "&search=" + search, function(response) {
 				$("#appenddata").append(response);
 			});
 		}
