--- a/src/main/resources/templates/view/popcron/allmovies.html
+++ b/src/main/resources/templates/view/popcron/allmovies.html
@@ -1,131 +1,71 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
+
 <meta charset="ISO-8859-1" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>All Movies - Movie Fantasy</title>
-<link rel="stylesheet"
-	href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" />
-<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" />
-<style type="text/css">
-.col-md-4 {
-	margin-bottom: 15px;
-}
+<title>English Movies - Movie Fantasy</title>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" />
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" />
+<link rel="stylesheet" th:href="@{/css/custom.css}" />
 
-.card-body {
-	background: #234238;
-	color: #fff;
-	text-align: center;
-}
-
-.card-body:hover {
-	background: #1abf8a;
-	color: #fff;
-	text-align: center;
-}
-</style>
 </head>
 <body>
-	<nav class="navbar navbar-expand-md navbar-light bg-dark fixed-top">
-		<a class="navbar-brand"><img
-			src="https://blog.eduonix.com/wp-content/uploads/2018/12/eduonix-logo.png"></a>
-		<button type="button" class="navbar-toggler bg-light"
-			data-toggle="collapse" data-target="#nav">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-
-		<div class="collapse navbar-collapse justify-content-between" id="nav">
-			<ul class="navbar-nav">
-				<li class="nav-item"><a
-					class="nav-link text-light font-weight-bold px-3"
-					th:href="@{'/movies'}">ALL MOVIES</a></li>
-				<li class="nav-item"><a
-					class="nav-link text-light font-weight-bold px-3"
-					th:href="@{'/movierooms'}">MOVIE ROOMS</a></li>
-				<li class="nav-item"><a
-					class="nav-link text-light font-weight-bold px-3"
-					th:href="@{'/genres'}">GENRES</a></li>
-				<!-- <li class="nav-item dropdown" data-toggle="dropdown"><a
-					class="nav-link text-light font-weight-bold px-3 dropdown-toggle"
-					href="#">GENRES</a>
-					<div class="dropdown-menu">
-						<a class="dropdown-item" href="#">Fast Food</a> <a
-							class="dropdown-item" href="#">Lunch</a> <a class="dropdown-item"
-							href="#">Dessert</a>
-					</div></li> -->
-				<li class="nav-item"><a
-					class="nav-link text-light font-weight-bold px-3"
-					th:href="@{'/popular'}">POPULAR MOVIES</a></li>
-
-				<li class="nav-item"><a
-					class="nav-link text-light font-weight-bold px-3"
-					th:href="@{'/moviesbylanguage?language=te'}">TELUGU</a></li>
-			</ul>
-			<ul class="navbar-nav">
-				<li class="nav-item"><a href="" class="nav-link text-light font-weight-bold px-3">SIGNUP</a></li>
-			</ul>
-		</div>
-	</nav>
-
-
-
+	<nav th:replace="fragments/menuheader :: menuheader"></nav>
 	<div class="container-fluid" style="margin-top: 70px;">
+		<div th:replace="fragments/searchmenu :: searchmenu"></div>
 		<div id="appenddata"></div>
 	</div>
 </body>
+
+
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script
-	src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
 
 <script type="text/javascript" th:inline="javascript">
-	$(function() {
-		var pageIndex = 1;
-		var genre = [[${genre}]];
-		var keyword = [[${keyword}]];
-		$.get("/getmovies?pageIndex=" + pageIndex+"&genre="+ genre+"&keyword="+keyword,
-				function(response) {
-					$("#appenddata").append(response);
-				});
-		
-		
-		$(document.body).on('touchmove', onMobileScroll); // for mobile
-		$(window).on('scroll', onWebScroll); // for web
-		
-		
-		function onMobileScroll() {
-			if ($(window).scrollTop() + window.innerHeight >= document.body.scrollHeight) {
-				pageIndex = pageIndex + 1;
-				$.get("/getmovies?pageIndex=" + pageIndex+"&genre="+ genre+"&keyword="+keyword,
-						function(response) {
-							$("#appenddata").append(response);
-						});
-			}
-		}
-
-		// callback
-		function onWebScroll() {
-				if($(window).scrollTop() + $(window).height() == getDocHeight()) {
-				pageIndex = pageIndex + 1;
-				$.get("/getmovies?pageIndex=" + pageIndex+"&genre="+ genre+"&keyword="+keyword,
-						function(response) {
-							$("#appenddata").append(response);
-						});
-			}
-		}
-		
-		function getDocHeight() {
-		    var D = document;
-		    return Math.max(
-		        D.body.scrollHeight, D.documentElement.scrollHeight,
-		        D.body.offsetHeight, D.documentElement.offsetHeight,
-		        D.body.clientHeight, D.documentElement.clientHeight
-		    );
-		}
-
+$(function() {
+	var pageIndex = 1;
+	var genre = [[${genre}]];
+	var keyword = [[${keyword}]];
+	$.get("/getmovies?pageIndex=" + pageIndex + "&genre=" + genre + "&keyword=" + keyword, function(response) {
+		$("#appenddata").append(response);
 	});
+	
+	
+	$(document.body).on('touchmove', onMobileScroll); // for mobile
+	$(window).on('scroll', onWebScroll); // for web
+	
+	
+	function onMobileScroll() {
+		if ($(window).scrollTop() + window.innerHeight >= document.body.scrollHeight) {
+			pageIndex = pageIndex + 1;
+			$.get("/getmovies?pageIndex=" + pageIndex + "&genre=" + genre + "&keyword=" + keyword, function(response) {
+				$("#appenddata").append(response);
+			});
+		}
+	}
+
+	// callback
+	function onWebScroll() {
+		if($(window).scrollTop() + $(window).height() == getDocHeight()) {
+			pageIndex = pageIndex + 1;
+			$.get("/getmovies?pageIndex=" + pageIndex + "&genre=" + genre + "&keyword=" + keyword, function(response) {
+				$("#appenddata").append(response);
+			});
+		}
+	}
+	
+	function getDocHeight() {
+	    var D = document;
+	    return Math.max(
+	        D.body.scrollHeight, D.documentElement.scrollHeight,
+	        D.body.offsetHeight, D.documentElement.offsetHeight,
+	        D.body.clientHeight, D.documentElement.clientHeight
+	    );
+	}
+
+});
 </script>
 </html>
