--- a/src/main/resources/templates/view/popcron/genres.html
+++ b/src/main/resources/templates/view/popcron/genres.html
@@ -39,7 +39,7 @@
 		<div class="collapse navbar-collapse justify-content-between" id="nav">
 			<ul class="navbar-nav">
 				<li class="nav-item"><a
-					class="nav-link text-light font-weight-bold px-3" th:href="@{'/movies'}">ALL MOVIES</a>
+					class="nav-link text-light font-weight-bold px-3" th:href="@{'/movies'}">ENGLISH</a>
 				</li>
 				<li class="nav-item"><a
 					class="nav-link text-light font-weight-bold px-3" th:href="@{'/movierooms'}">MOVIE ROOMS</a>
