--- a/src/main/resources/templates/view/popcron/showmovie.html
+++ b/src/main/resources/templates/view/popcron/showmovie.html
@@ -42,7 +42,7 @@
 			<ul class="navbar-nav">
 				<li class="nav-item"><a
 					class="nav-link text-light font-weight-bold px-3"
-					th:href="@{'/movies'}">ALL MOVIES</a></li>
+					th:href="@{'/movies'}">ENGLISH</a></li>
 				<li class="nav-item"><a
 					class="nav-link text-light font-weight-bold px-3"
 					th:href="@{'/movierooms'}">MOVIE ROOMS</a></li>
