--- a/src/main/resources/templates/fragments/searchmenu.html
+++ b/src/main/resources/templates/fragments/searchmenu.html
@@ -2,16 +2,25 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <div class="row" th:fragment="searchmenu">
 	<div class="col-md-12">
-		<div class="topnav">
-		<div class="search-container">
-			<form action="/dbmoviesearch" method="get">
-				<input type="text" placeholder="Search Movies" name="search" class="search">
-				<button type="submit">
-					<i class="fa fa-search" style="margin-bottom: 5px;vertical-align: sub;margin-left: 3px;"></i>
-				</button>
-			</form>
-		</div>
-		</div>
+		 <div class="s007 search-container">
+      <form action="/dbmoviesearch" method="get">
+        <div class="inner-form">
+          <div class="basic-search">
+            <div class="input-field">
+              <input type="text" placeholder="Search Movies..." name="search" class="search" id="moviesearch"/>
+              <div class="result-count">
+                <div class="icon-wrap">
+                <a href="javascript:void(0)" onclick="document.forms[0].submit();return false;"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20" height="20" viewBox="0 0 20 20">
+                  <path d="M18.869 19.162l-5.943-6.484c1.339-1.401 2.075-3.233 2.075-5.178 0-2.003-0.78-3.887-2.197-5.303s-3.3-2.197-5.303-2.197-3.887 0.78-5.303 2.197-2.197 3.3-2.197 5.303 0.78 3.887 2.197 5.303 3.3 2.197 5.303 2.197c1.726 0 3.362-0.579 4.688-1.645l5.943 6.483c0.099 0.108 0.233 0.162 0.369 0.162 0.121 0 0.242-0.043 0.338-0.131 0.204-0.187 0.217-0.503 0.031-0.706zM1 7.5c0-3.584 2.916-6.5 6.5-6.5s6.5 2.916 6.5 6.5-2.916 6.5-6.5 6.5-6.5-2.916-6.5-6.5z"></path>
+                </svg></a>
+              </div>
+              </div>
+            </div>
+          </div>
+          
+        </div>
+      </form>
+    </div>
 	</div>
 </div>
 </html>
