--- a/src/main/resources/templates/view/moviedb/moviepersons.html
+++ b/src/main/resources/templates/view/moviedb/moviepersons.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" />
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" />
 <link rel="stylesheet" th:href="@{/css/custom.css}" />
+<link rel="stylesheet" th:href="@{/css/main.css}" />
 </head>
 <body>
 	<nav th:replace="fragments/menuheader :: menuheader"></nav>
