--- a/src/main/resources/templates/view/moviedb/playmovie.html
+++ b/src/main/resources/templates/view/moviedb/playmovie.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" />
 <link rel="stylesheet" th:href="@{/lity/lity.css}" />
 <link rel="stylesheet" th:href="@{/css/custom.css}" />
+<link rel="stylesheet" th:href="@{/css/main.css}" />
 
 </head>
 <body>
