--- a/src/main/resources/templates/view/moviedb/showmovie.html
+++ b/src/main/resources/templates/view/moviedb/showmovie.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" />
 <link rel="stylesheet" th:href="@{/lity/lity.css}" />
 <link rel="stylesheet" th:href="@{/css/custom.css}" />
+<link rel="stylesheet" th:href="@{/css/main.css}" />
 <!-- https://cdnjs.cloudflare.com/ajax/libs/lity/2.4.0/lity.css -->
 </head>
 <body>
