--- a/src/main/resources/templates/fragments/menuheader.html
+++ b/src/main/resources/templates/fragments/menuheader.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<nav class="navbar navbar-expand-md navbar-light bg-dark fixed-top" th:fragment="menuheader">
+<nav class="navbar navbar-expand-md navbar-light bg-dark fixed-top" th:fragment="menuheader" style="z-index: 10600;">
 	<a class="navbar-brand" style="color:white;font-weight: bolder;">MOVIES</a>
 	<button type="button" class="navbar-toggler bg-light" data-toggle="collapse" data-target="#nav">
 		<span class="navbar-toggler-icon"></span>
